# firestorm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/01SimpleApplication/: CMakeLists.txt  ControlledCamera.cpp  ControlledCamera.hpp  SimpleApplication.cpp  SimpleApplication.hpp  main.cpp
examples/02Physics/: Alien.cpp  Alien.hpp  CMakeLists.txt  Collectable.cpp  Collectable.hpp  Enemy.cpp  Enemy.hpp  GroundBrick.cpp  GroundBrick.hpp  GroundTileMap.cpp  GroundTileMap.hpp  Labels.hpp  LevelEnd.cpp  LevelEnd.hpp  Obstacle.cpp  Obstacle.hpp  PhysicsApplication.cpp  PhysicsApplication.hpp  PlayerSceneNode.cpp  PlayerSceneNode.hpp  SimpleApplication.cpp  SimpleApplication.hpp  Slime.cpp  Slime.hpp  main.cpp
src/: CMakeLists.txt  Engine.cpp  Engine.hpp  EngineCreationParams.hpp  Firestorm.hpp  firestorm.hpp  types.hpp
src/core/: Types.hpp  types.hpp
src/graphics/: GraphicsCreationParams.hpp  GraphicsManager.cpp  GraphicsManager.hpp  Mesh.cpp  Mesh.hpp  Sprite.cpp  Sprite.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Texture.cpp  Texture.hpp  Transform.hpp  UniformData.hpp  Window.cpp  Window.hpp  WindowCreationParams.hpp
src/graphics/shaders/basic/: BasicShaders.hpp  compile.bat  compile.sh  frag.spv  shader.frag  shader.vert  vert.spv
src/graphics/vulkan/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DepthImage.cpp  DepthImage.hpp  Device.cpp  Device.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  MappedMemoryBuffer.cpp  MappedMemoryBuffer.hpp  QueueFamilyIndices.hpp  RenderPass.cpp  RenderPass.hpp  Shader.cpp  Shader.hpp  SwapChain.cpp  SwapChain.hpp  SwapChainSupportDetails.hpp  TextureImage.cpp  TextureImage.hpp  Vertex.cpp  Vertex.hpp  VulkanDriver.cpp  VulkanDriver.hpp
src/io/: FileProvider.cpp  FileProvider.hpp  InputManager.cpp  InputManager.hpp  Keys.hpp  Resource.cpp  Resource.hpp
src/physics/: PhysicsCreationParams.hpp  PhysicsManager.cpp  PhysicsManager.hpp
src/scene/: AnimatedSpriteSceneNode.cpp  AnimatedSpriteSceneNode.hpp  BodyComponent.cpp  BodyComponent.hpp  Camera.cpp  Camera.hpp  CameraSceneNode.cpp  CameraSceneNode.hpp  Component.cpp  Component.hpp  RendererComponent.cpp  RendererComponent.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.cpp  SceneNode.hpp  SpriteRendererComponent.cpp  SpriteRendererComponent.hpp  SpriteSceneNode.cpp  SpriteSceneNode.hpp  Tile.cpp  Tile.hpp  TileMapRendererComponent.cpp  TileMapRendererComponent.hpp  TileMapSceneNode.cpp  TileMapSceneNode.hpp  TransformationComponent.cpp  TransformationComponent.hpp
src/utils/: Logger.hpp
